syntax = "proto3";
package master_api;

import "google/protobuf/empty.proto";
import "common.proto";

service MasterService {
  rpc NodeRegister(NodeRegisterRequest) returns (NodeRegisterResponse);
  rpc TaskComplete(TaskCompleteRequest) returns (project_common.StatusResponse);
  rpc NodeUnregister(NodeUnregisterRequest) returns (project_common.StatusResponse);
  rpc StreamData(project_common.DataIdentifier) returns (stream project_common.DataChunk);
  // rpc NodeHeartbeat(NodeHeartbeatRequest) returns (NodeHeartbeatResponse);
  // rpc JobFailed(JobFailedRequest) returns (JobFailedResponse);

 
}

message NodeRegisterResponse {
    int64 node_id = 1;
    string message = 2;
    bool success = 3;
}

message NodeUnregisterRequest {
    int64 node_id = 1;
}

message NodeRegisterRequest {
    string username = 1;
    string password = 2;
    string machine_fingerprint = 3;
    int64 memory_bytes = 4;
}

message MasterDataNotification {
  int64 data_id = 1;
  int64 size = 2;
  string hash = 3;
}

message TaskCompleteRequest {
    int64 task_id = 1;
}




